# qr

./: .coverage  .dockerignore  .env.example  .gitignore  LICENSE  README.md  SECURITY.md  app.py  config.py  docker-compose.yml  dockerfile  errors.py  pyproject.toml  requirements.txt
.github/workflows/: github-ci.yaml  tests.yaml
dependencies/: services.py
middleware/: error_handler.py  logging.py  openapi.py
routes/: health_routes.py  page_routes.py
routes/api_v1/: __init__.py  batch.py  classic.py  gradient.py
schemas/: enums.py
schemas/dto/requests/: qr.py
schemas/dto/responses/: common.py
services/: qr_service.py
shared/: color.py  formatters.py  ip_utils.py  logging.py  qr_utils.py
static/css/: index-style.css
static/js/: index-script.js
templates/: index.html
tests/integration/: conftest.py  test_app.py  test_batch_details.py  test_error_handling.py  test_health.py  test_pages.py  test_qr_endpoints.py
tests/unit/: test_color.py  test_config.py  test_errors.py  test_formatters.py  test_qr_service.py  test_qr_service_helpers.py  test_qr_utils.py  test_request_schemas.py
